# system_security_giovanni_prete

./: .gitignore
common/inc/s3k/: syscall.h
common/src/s3k/: syscall.c
kernel/inc/: cfa.h  syscall.h
kernel/src/: cfa.c  exception.c  kernel.c  syscall.c
projects/project/: Makefile  README.md  merge_cfg.py  qemu_out.txt  s3k_conf.h  test.sh  utils.h
projects/project/app/: main.c  policy_to_consts.py
projects/project/jop/: main.c
projects/project/llvm-pass/: CFAGeneratorPass.cpp  CMakeLists.txt  Makefile
projects/project/monitor/: main.c  policy.h
